<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_menu"
    tools:context=".activity.HomeMenuActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="84dp"
                android:layout_height="110dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp"
                android:src="@drawable/icon_fashion_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/string_home_page"
                android:textColor="@color/colorBlackTextTitle"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_welcome_page"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/string_welcome_app"
                android:textColor="@color/colorBlackTextSubTitle"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_page" />

            <TextView
                android:id="@+id/tv_menu_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/roboto"
                android:text="@string/string_kategori"
                android:textColor="@color/colorBlackTextSubTitle"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome_page" />

            <LinearLayout
                android:id="@+id/layout_kategori_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_menu_home">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_clothes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:elevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:id="@+id/layout_item_clothes_menu"
                            android:layout_width="129dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="8dp"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:id="@+id/img_item_clothes_menu"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/activity_vertical_margin"
                                android:src="@drawable/fashion" />

                            <TextView
                                android:id="@+id/tv_item_clothes_name_menu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/clothes_home_menu"
                                android:textAlignment="center"
                                android:textColor="@color/colorBlackTextTitle"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_shoes_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:id="@+id/layout_item_shoes_menu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/img_item_shoes_menu"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/activity_vertical_margin"
                                android:padding="4dp"
                                android:src="@drawable/shoes" />

                            <TextView
                                android:id="@+id/tv_item_shoes_name_menu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/shoes_home_menu"
                                android:textAlignment="center"
                                android:textColor="@color/colorBlackTextTitle"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_watch_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:id="@+id/layout_item_watch_menu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/img_item_watch_photo"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:layout_margin="@dimen/activity_vertical_margin"
                                android:layout_gravity="center"
                                android:src="@drawable/clock" />

                            <TextView
                                android:id="@+id/tv_item_watch_name_menu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/watchs_home_menu"
                                android:textAlignment="center"
                                android:textColor="@color/colorBlackTextTitle"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_glasses_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:id="@+id/layout_item_glasses_menu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/img_item_glasses_menu"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:layout_margin="@dimen/activity_vertical_margin"
                                android:layout_gravity="center"
                                android:src="@drawable/eyeglasses" />

                            <TextView
                                android:id="@+id/tv_item_glasses_name_menu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/glasses_home_menu"
                                android:textAlignment="center"
                                android:textColor="@color/colorBlackTextTitle"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>